# SARAS-Navier-Stokes-slover

./: #CMakeLists.txt#  CMakeLists.txt  README.md  config  config~  copyOfTesting.py  cpu-core.cpp.txt  error.py  meow.tar  out  run.sh  runconf  test_cpus.py  testing.py  visualizeHDF5.ipynb
.ipynb_checkpoints/: visualizeHDF5-checkpoint.ipynb
RESULTS/3D_ldcTest_Results/: streamlines.py
TODO/: fixes  fixes.txt
input/: parameters.yaml
lib/initial/: initial.h
lib/io/: CMakeLists.txt  help.txt  parser.cc  parser.h  reader.cc  reader.h  tseries.cc  writer.cc  writer.h
output/: eklasky.hpg.rc.ufl.edu  md.0  md.idx  mmd.0  profiling.json  same.py
output.bp/: md.0  md.idx  profiling.json
output/output.bp/: data.0  md.0  md.idx  profiling.json
output/postProcessors/: restartProRes.py
output/timePlots/: time_series_plot_hydro.py
output/videos/: video_Out.py
src/solvers/: CMakeLists.txt  main.cc
src/solvers/hydro/: hydro_d2.cc  hydro_d3.cc
src/solvers/scalar/: scalar_d2.cc  scalar_d2.cc:Zone.Identifier  scalar_d3.cc
src/tests/: CMakeLists.txt
tests/: testLDC.sh
tests/.ipynb_checkpoints/: visualizeHDF5-checkpoint.ipynb
tests/ldcTest/: checkLDC.py
tests/ldcTest/input/: parameters.yaml
tests/ldcTest/output/output.bp/: data.0  md.0  md.idx
videos/: filelist.txt
